# KShell

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.playwright-mcp/: page-2026-07-01T01-14-19-957Z.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  state.rs  vault.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/keys/: commands.rs  deploy.rs  gen.rs  mod.rs
src-tauri/src/sftp/: commands.rs  local_scope.rs  mod.rs  session.rs
src-tauri/src/ssh/: channel.rs  client.rs  known_hosts.rs  mod.rs  scheduler.rs  tunnel.rs
src-tauri/src/store/: mod.rs  model.rs
src/api/: docker-compose-command.ts  docker-exec.ts  docker-probe.ts  docker-run-validation.ts  docker-validation.ts  docker.ts  keys.ts  monitor.ts  sessions.ts  settings.ts  sftp.ts  ssh.ts  tunnel.ts  vault.ts
src/components/dialogs/: AboutDialog.vue  CommandPalette.vue  ConfirmDialog.vue  KeyManagerDialog.vue  KnownHostsDialog.vue  MonitorDialog.vue  MultiPromptDialog.vue  NewConnectionDialog.vue  PasswordPromptDialog.vue  PreferencesDialog.vue  PromptDialog.vue  ShortcutsDialog.vue  ToastContainer.vue  VaultUnlockDialog.vue
src/components/docker/: DockerContainerEditDialog.vue  DockerContainers.vue  DockerImageInspectDialog.vue  DockerImages.vue  DockerInspectDialog.vue  DockerInstallDialog.vue  DockerLogDialog.vue  DockerNetworks.vue  DockerRawInspectDialog.vue  DockerRegistryDialog.vue  DockerRunDialog.vue  DockerStacks.vue  DockerSystemDialog.vue  DockerTabView.vue  DockerVolumes.vue  clone-container.ts  create-container.ts  edit-container.ts  latest-operation-guard.ts  recreate-container.ts
src/components/layout/: ActivityBar.vue  SessionSidebar.vue  StatusBar.vue  TitleBar.vue  WorkArea.vue
src/components/monitor/: MonitorSummary.vue  Sparkline.vue
src/components/sftp/: FilePane.vue  FilePreviewDialog.vue  SftpTabView.vue  SftpView.vue  TransferPanel.vue  filePreview.ts
src/lib/: highlight.ts  migrate-localStorage.ts  platform.ts  z-index.ts
src/stores/: active-terminal.ts  command-palette.ts  dialogs.ts  docker-poll-result.ts  docker.ts  host-key.ts  keys.ts  ki-prompt.ts  monitor.ts  overlays.ts  preferences.ts  prompt.ts  quick-commands.ts  session-actions.ts  sessions.ts  sidebar-panels.ts  status-actions.ts  tab-views.ts  tabs.ts  toast.ts  transfers.ts  ui.ts  vault.ts
src/styles/: global.css  hljs.css
tests/: connection-runtime-regression.test.mjs  docker-clone-safety.test.mjs  docker-command-safety.test.mjs  docker-compose-safety.test.mjs  docker-create-safety.test.mjs  docker-detail-race.test.mjs  docker-edit-dialog-busy.test.mjs  docker-edit-network-race.test.mjs  docker-edit-transaction.test.mjs  docker-input-validation.test.mjs  docker-install-entry.test.mjs  docker-log-race.test.mjs  docker-port-validation.test.mjs  docker-recreate-safety.test.mjs  docker-regression-coverage.test.mjs  docker-run-advanced-preservation.test.mjs  docker-run-dialog-busy.test.mjs  docker-run-spec-preservation.test.mjs  docker-secret-stdin.test.mjs  docker-store-availability.test.mjs  filePreview.test.mjs  prompt-queue.test.mjs
(+54 files in other folders)
