[package]
name = "kshell"
version = "0.1.0"
description = "KShell — a modern SSH client"
authors = ["you"]
edition = "2021"

[lib]
name = "kshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH
russh = "0.52"

# async / concurrent
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dashmap = "6"
bytes = "1"

# util
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# 持久化
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
